@@ -103,9 +103,450 @@ importFrom("R.oo", "ll")
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # EXPORTS
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-# Export all public methods, that is, those without a preceeding dot
-# in their names.
-exportPattern("^[^\\.]")
+export("!.RspProduct")
+export("[.RspDocument")
+export("[<-.RspDocument")
+export("appendRootPaths")
+export("appendRootPaths.HttpDaemon")
+export("as.character.HttpDaemon")
+export("as.character.HttpRequest")
+export("as.character.RspException")
+export("as.character.RspStringProduct")
+export("asisTangle")
+export("asisWeave")
+export("asRspString")
+export("asRspString.RspCode")
+export("asRspString.RspCodeChunk")
+export("asRspString.RspComment")
+export("asRspString.RspConstruct")
+export("asRspString.RspDirective")
+export("asRspString.RspDocument")
+export("asRspString.RspText")
+export("asRspString.RspUnparsedDirective")
+export("browseRsp")
+export("browseRsp.default")
+export("browseRsp.Package")
+export("buildNonSweaveTexToPdf")
+export("buildNonSweaveVignette")
+export("buildNonSweaveVignettes")
+export("buildPkgIndexHtml")
+export("buildVignette")
+export("capabilitiesOf")
+export("capabilitiesOf.RRspPackage")
+export("compileAsciiDoc")
+export("compileAsciiDoc.default")
+export("compileAsciiDocNoweb")
+export("compileAsciiDocNoweb.default")
+export("compileKnitr")
+export("compileKnitr.default")
+export("compileLaTeX")
+export("compileLaTeX.default")
+export("compileMarkdown")
+export("compileMarkdown.default")
+export("compileRnw")
+export("compileRnw.default")
+export("compileRsp")
+export("compileRsp.default")
+export("compileRsp0")
+export("compileRsp0.default")
+export("compileSweave")
+export("compileSweave.default")
+export("dropEmptyText")
+export("dropEmptyText.RspDocument")
+export("dvips")
+export("epsDev")
+export("escape")
+export("escape.HtmlRspLanguage")
+export("escape.RspLanguage")
+export("escapeRspContent")
+export("escapeRspTags")
+export("evaluate.RspDocument")
+export("evaluate.RspRSourceCode")
+export("evaluate.RspShSourceCode")
+export("evaluate.RspSourceCode")
+export("evaluate.RspString")
+export("exprToCode")
+export("exprToCode.RspRSourceCodeFactory")
+export("exprToCode.RspShSourceCodeFactory")
+export("exprToCode.RspSourceCodeFactory")
+export("extensionToIMT")
+export("FileRspResponse")
+export("finalize.HttpDaemon")
+export("findAsciiDoc")
+export("findAsciiDoc.default")
+export("findPandoc")
+export("findPandoc.default")
+export("findProcessor")
+export("findProcessor.RspFileProduct")
+export("findProcessor.RspProduct")
+export("findProcessor.RspRSourceCode")
+export("findProcessor.RspShSourceCode")
+export("flatten")
+export("flatten.RspDocument")
+export("flush.FileRspResponse")
+export("flush.HttpDaemonRspResponse")
+export("flush.RspResponse")
+export("getAbsolutePath.FileRspResponse")
+export("getAbsolutePath.RspPage")
+export("getAttribute")
+export("getAttribute.RspObject")
+export("getAttributes")
+export("getAttributes.RspObject")
+export("getCode")
+export("getCode.RspCode")
+export("getComment")
+export("getComment.HtmlRspLanguage")
+export("getComment.RspComment")
+export("getComment.RspConstruct")
+export("getComment.RspLanguage")
+export("getCompleteCode")
+export("getCompleteCode.RspRSourceCodeFactory")
+export("getCompleteCode.RspSourceCodeFactory")
+export("getConfig")
+export("getConfig.HttpDaemon")
+export("getContent")
+export("getContent.RspEvalDirective")
+export("getContent.RspIncludeDirective")
+export("getContent.RspText")
+export("getContentLength")
+export("getContentLength.HttpRequest")
+export("getContentType")
+export("getContentType.HttpRequest")
+export("getContextPath")
+export("getContextPath.HttpRequest")
+export("getCount")
+export("getCount.HttpDaemon")
+export("getDateHeader")
+export("getDateHeader.HttpRequest")
+export("getDefaultFilenamePattern")
+export("getDefaultFilenamePattern.HttpDaemon")
+export("getEcho")
+export("getEcho.RspCode")
+export("getFile")
+export("getFile.RspEvalDirective")
+export("getFile.RspIncludeDirective")
+export("getFileSize")
+export("getFileSize.RspFileProduct")
+export("getHeader")
+export("getHeader.HttpRequest")
+export("getHttpRequest")
+export("getHttpRequest.HttpDaemon")
+export("getInclude")
+export("getInclude.RspCodeChunk")
+export("getInclude.RspConstruct")
+export("getInclude.RspText")
+export("getInclude.RspVariableDirective")
+export("getItem")
+export("getItem.RspPreprocessingException")
+export("getLanguage")
+export("getLanguage.RspLanguage")
+export("getLanguage.RspSourceCodeFactory")
+export("getMessage.RspPreprocessingException")
+export("getMetadata")
+export("getMetadata.RspDocument")
+export("getMetadata.RspProduct")
+export("getMetadata.RspString")
+export("getName.FileRspResponse")
+export("getName.RspPage")
+export("getNameContentDefaultAttributes")
+export("getNameContentDefaultAttributes.RspDirective")
+export("getNewline")
+export("getNewline.RspLanguage")
+export("getOutput")
+export("getOutput.FileRspResponse")
+export("getParameter")
+export("getParameter.HttpRequest")
+export("getParameters")
+export("getParameters.HttpRequest")
+export("getPath.FileRspResponse")
+export("getPath.RspDocument")
+export("getPath.RspPage")
+export("getPort")
+export("getPort.HttpDaemon")
+export("getProtocol")
+export("getProtocol.HttpRequest")
+export("getQueryString")
+export("getQueryString.HttpRequest")
+export("getRealPath")
+export("getRealPath.HttpRequest")
+export("getRemoteAddress")
+export("getRemoteAddress.HttpRequest")
+export("getRemoteHost")
+export("getRemoteHost.HttpRequest")
+export("getRemoteUser")
+export("getRemoteUser.HttpRequest")
+export("getRequestUri")
+export("getRequestUri.HttpRequest")
+export("getRequestUrl")
+export("getRequestUrl.HttpRequest")
+export("getRootPaths")
+export("getRootPaths.HttpDaemon")
+export("getScheme")
+export("getScheme.HttpRequest")
+export("getServerName")
+export("getServerName.HttpRequest")
+export("getServerPort")
+export("getServerPort.HttpRequest")
+export("getServletPath")
+export("getServletPath.HttpRequest")
+export("getSource.RspDocument")
+export("getSource.RspString")
+export("getSuffixSpecs")
+export("getSuffixSpecs.RspConstruct")
+export("getType")
+export("getType.RspDocument")
+export("getType.RspFileProduct")
+export("getType.RspPageDirective")
+export("getType.RspProduct")
+export("getType.RspString")
+export("getVerbatim")
+export("getVerbatim.HtmlRspLanguage")
+export("getVerbatim.RspIncludeDirective")
+export("getVerbatim.RspLanguage")
+export("getWrap")
+export("getWrap.RspIncludeDirective")
+export("hasAttribute")
+export("hasAttribute.RspObject")
+export("hasParameter")
+export("hasParameter.HttpRequest")
+export("hasProcessor")
+export("hasProcessor.RspProduct")
+export("hexToInt")
+export("HtmlRspLanguage")
+export("HttpDaemon")
+export("HttpDaemonRspResponse")
+export("HttpRequest")
+export("import")
+export("import.RspResponse")
+export("importRsp")
+export("importRsp.default")
+export("indexOfNonQuoted")
+export("indexOfNonQuoted.default")
+export("insertRootPaths")
+export("insertRootPaths.HttpDaemon")
+export("isCapableOf")
+export("isCapableOf.RRspPackage")
+export("isStarted")
+export("isStarted.HttpDaemon")
+export("le")
+export("makeSourceCode")
+export("makeSourceCode.RspSourceCodeFactory")
+export("mergeTexts")
+export("mergeTexts.RspDocument")
+export("nbrOfLines")
+export("nbrOfLines.RspString")
+export("nbrOfParameters")
+export("nbrOfParameters.HttpRequest")
+export("openUrl")
+export("openUrl.HttpDaemon")
+export("parse")
+export("parse.default")
+export("parse.RspParser")
+export("parse.RspRSourceCode")
+export("parse.RspString")
+export("parse.RspUnparsedDirective")
+export("parse.RspUnparsedExpression")
+export("parseCutNPasteDirectives")
+export("parseCutNPasteDirectives.RspDocument")
+export("parseIfElseDirectives")
+export("parseIfElseDirectives.RspDocument")
+export("parseInternetMediaType")
+export("parseRaw")
+export("parseRaw.RspParser")
+export("parseRsp")
+export("parseRsp.default")
+export("parseVignette")
+export("parseVignettes")
+export("preprocess")
+export("preprocess.RspDocument")
+export("print.RspArguments")
+export("print.RspDocument")
+export("print.RspFileProduct")
+export("print.RspObject")
+export("print.RspProduct")
+export("print.RspSourceCode")
+export("print.RspString")
+export("print.RspStringProduct")
+export("process")
+export("process.RspProduct")
+export("processRsp")
+export("processRsp.HttpDaemon")
+export("ps2pdf")
+export("R.rsp")
+export("rargs")
+export("rargs.default")
+export("rcat")
+export("rcat.default")
+export("rcat.expression")
+export("rcat.function")
+export("rcat.RspDocument")
+export("rcat.RspRSourceCode")
+export("rcat.RspString")
+export("rclean")
+export("rclean.default")
+export("rclean.RspDocument")
+export("rclean.RspString")
+export("rcompile")
+export("rcompile.default")
+export("rcompile.RspDocument")
+export("rcompile.RspString")
+export("requireAttributes")
+export("requireAttributes.RspDirective")
+export("restart")
+export("restart.HttpDaemon")
+export("rfile")
+export("rfile.default")
+export("rfile.expression")
+export("rfile.function")
+export("rfile.RspDocument")
+export("rfile.RspRSourceCode")
+export("rfile.RspString")
+export("RRspPackage")
+export("rscript")
+export("rscript.default")
+export("rscript.RspDocument")
+export("rscript.RspString")
+export("rsource")
+export("rsource.default")
+export("rsource.expression")
+export("rsource.function")
+export("rsource.RspDocument")
+export("rsource.RspRSourceCode")
+export("rsource.RspString")
+export("rsp")
+export("rsp.default")
+export("rspCapture")
+export("RspCode")
+export("RspCodeChunk")
+export("RspComment")
+export("RspConstruct")
+export("RspCopyDirective")
+export("RspCutDirective")
+export("RspDirective")
+export("RspDocument")
+export("RspElseDirective")
+export("RspEndcopyDirective")
+export("RspEndcutDirective")
+export("RspEndifDirective")
+export("RspErrorDirective")
+export("RspEvalDirective")
+export("RspException")
+export("RspExpression")
+export("RspFileProduct")
+export("RspIfdefDirective")
+export("RspIfDirective")
+export("RspIfeqDirective")
+export("RspIfndefDirective")
+export("RspIfneqDirective")
+export("RspIncludeDirective")
+export("RspIntegerDirective")
+export("RspLanguage")
+export("RspLogicalDirective")
+export("RspMetaDirective")
+export("RspNumericDirective")
+export("RspObject")
+export("RspPage")
+export("RspPageDirective")
+export("RspParseException")
+export("RspParser")
+export("RspPasteDirective")
+export("RspPreprocessingException")
+export("RspProduct")
+export("RspResponse")
+export("RspRSourceCode")
+export("RspRSourceCodeFactory")
+export("RspShSourceCode")
+export("RspShSourceCodeFactory")
+export("RspSourceCode")
+export("RspSourceCodeFactory")
+export("RspString")
+export("RspStringDirective")
+export("RspStringProduct")
+export("rspTangle")
+export("rsptex")
+export("rsptex.default")
+export("RspText")
+export("rspToHtml")
+export("rspToHtml.default")
+export("RspUnknownDirective")
+export("RspUnparsedDirective")
+export("RspUnparsedExpression")
+export("RspVariableDirective")
+export("rspWeave")
+export("rstring")
+export("rstring.default")
+export("rstring.expression")
+export("rstring.function")
+export("rstring.RspDocument")
+export("rstring.RspSourceCode")
+export("rstring.RspString")
+export("setAttribute")
+export("setAttribute.RspObject")
+export("setAttributes")
+export("setAttributes.RspObject")
+export("setCount")
+export("setCount.HttpDaemon")
+export("setMetadata")
+export("setMetadata.RspDocument")
+export("setMetadata.RspProduct")
+export("setMetadata.RspString")
+export("setRootPaths")
+export("setRootPaths.HttpDaemon")
+export("sourceAllRsp")
+export("sourceAllRsp.default")
+export("sourceRsp")
+export("sourceRsp.default")
+export("sourceRspV2")
+export("sourceRspV2.default")
+export("sourceTcl")
+export("sourceTcl.HttpDaemon")
+export("sourceWithTrim")
+export("sourceWithTrim.default")
+export("splitUrl")
+export("splitUrl.default")
+export("start.HttpDaemon")
+export("startHelp")
+export("startHelp.HttpDaemon")
+export("stop")
+export("stop.default")
+export("stop.HttpDaemon")
+export("subset.RspDocument")
+export("tangle")
+export("tangle.RspRSourceCode")
+export("tangle.RspSourceCode")
+export("tidy")
+export("tidy.RspRSourceCode")
+export("tidy.RspSourceCode")
+export("toLatex.character")
+export("toLatex.default")
+export("toR")
+export("toR.RspDocument")
+export("toR.RspString")
+export("toSourceCode")
+export("toSourceCode.RspSourceCodeFactory")
+export("translateRsp")
+export("translateRsp.default")
+export("translateRspV1")
+export("translateRspV1.default")
+export("trim.RspDocument")
+export("trimNonText")
+export("trimNonText.RspDocument")
+export("typeOfRnw")
+export("typeOfRnw.default")
+export("unescapeRspTags")
+export("urlDecode")
+export("view")
+export("view.RspFileProduct")
+export("view.RspProduct")
+export("write")
+export("write.default")
+export("write.FileRspResponse")
+export("write.HttpDaemonRspResponse")
+export("write.RspResponse")
+export("writeResponse")
+export("writeResponse.HttpDaemon")
+export("wstring")
+export("wstring.default")
 
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
