@@ -5,6 +5,8 @@ Version: 0.19.6 [2014-10-18]
 o Added RSP preprocessing directives <%@ifdef ...%> and <%@ifndef ...%>
   which are shorts for <@if test="exists" ...%> and it's negated form.
 o ROBUSTNESS: Added more tests for the RSP language.
+o CLEANUP: Method flush() part of the old RSP API no longer masks
+  base::flush().
 
 
 Version: 0.19.5 [2014-10-03]
